2006-04-28  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/src/rinterface.c (R_igraph_attribute_copy) :
	attribute handling but corrected

2006-04-23  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/src/rinterface.c (R_igraph_attribute_add_vertices)
	(R_igraph_attribute_add_edges, R_igraph_attribute_delete_vertices)
	(R_igraph_attribute_delete_edges) : handle vectors in addition 
	to lists

2006-04-21  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/attributes.R (get.graph.attribute)
	(set.graph.attribute, get.vertex.attribute, set.vertex.attribute)
	(get.edge.attribute, set.edge.attribute) : updated
	* interfaces/R/src/rinterface.c (R_igraph_attribute_init)
	(R_igraph_attribute_destroy, R_igraph_attribute_copy)
	(R_igraph_attribute_add_vertices, R_igraph_attribute_delete_vertices)
	(R_igraph_attribute_add_edges, R_igraph_attribute_delete_edges) :
	written properly (?)
	(R_SEXP_to_igraph, R_SEXP_to_igraph_copy, R_igraph_to_SEXP) : updated

	* interfaces/R/src/rinterface.c (R_igraph_attribute_delete_edges)
	(R_igraph_attribute_delete_vertices) : updated for new 
	igraph_i_attribute_delete_edges and 
	igraph_i_attribute_delete_vertices semantics

2006-04-20  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/attributes.R (add.graph.attribute)
	(remove.graph.attribute, get.graph.attribute, set.graph.attribute)
	(add.vertex.attribute, remove.vertex.attribute)
	(get.vertex.attribute, set.vertex.attribute)
	(add.edge.attribute, remove.edge.attribute)
	(get.edge.attribute, set.edge.attribute) : rewritten
	(g.a, v.a, e.a, g.a<-, v.a<-, e.a<-) : temporarily removed
	* interfaces/R/src/rinterface.c (R_igraph_attribute_init)
	(R_igraph_attribute_destroy, R_igraph_attribute_copy)
	(R_igraph_attribute_add_vertices, R_igraph_attribute_add_edges)
	(R_igraph_attribute_delete_edges, R_igraph_attribute_table)
	(R_igraph_attribute_oldtable) : added
	(R_igraph_before, R_igraph_after) : updated
	(R_igraph_attributes_to_SEXP, R_SEXP_to_attributes) 