@@ -35,8 +35,6 @@
 
 SEXP R_igraph_matrix_to_SEXP(igraph_matrix_t *m);
 SEXP R_igraph_strvector_to_SEXP(igraph_strvector_t *m);
-SEXP R_igraph_vs_to_SEXP(igraph_t *g, igraph_vs_t *vs);
-SEXP R_igraph_es_to_SEXP(igraph_t *g, igraph_es_t *vs);
 SEXP R_igraph_to_SEXP(igraph_t *graph);
 
 int R_igraph_SEXP_to_strvector(SEXP rval, igraph_strvector_t *sv);
@@ -366,70 +364,6 @@ SEXP R_igraph_strvector_to_SEXP(igraph_strvector_t *m) {
     SET_STRING_ELT(result, i, CREATE_STRING_VECTOR(str));
   }
   
-  UNPROTECT(1);
-  return result;
-}
-
-/*
- * All types of iterators are converted to a vector or a sequence
- * Vector right now. :)
- */
-SEXP R_igraph_vs_to_SEXP(igraph_t *g, igraph_vs_t *it) {
-
-  SEXP result;
-  igraph_vs_t vectorvs;
-  const igraph_vector_t *v;
-  long int vlen;
-
-  igraph_vs_vectorview_it(g, it, &vectorvs);
-  IGRAPH_FINALLY(igraph_vs_destroy, &vectorvs);
-  v=igraph_vs_vector_getvector(g, &vectorvs);
-  vlen=igraph_vector_size(v);
-  
-  PROTECT(result=NEW_LIST(2));
-  SET_VECTOR_ELT(result, 0, NEW_NUMERIC(3));
-  SET_VECTOR_ELT(result, 1, NEW_NUMERIC(vlen));
-  REAL(VECTOR_ELT(result, 0))[0]=1;
-  REAL(VECTOR_ELT(result, 0))[1]=1;
-  REAL(VECTOR_ELT(result, 0))[2]=vlen;
-  igraph_vector_copy_to(v, REAL(VECTOR_ELT(result, 1)));
-  
-  SET_CLASS(result, ScalarString(CREATE_STRING_VECTOR("igraphvsvector")));
-  
-  igraph_vs_destroy(&vectorvs);
-  IGRAPH_FINALLY_CLEAN(1);
-  UNPROTECT(1);
-  return result;
-}
-
-/* 
- * All types of iterators are converted to a vector or a sequence
- * Vector right now. :)
- */
-SEXP R_igraph_es_to_SEXP(igraph_t *g, igraph_es_t *it) {
-
-  SEXP result;
-  igraph_es_t vectores;
-  const igraph_vector_t *v;
-  long int vlen;
-
-  igraph_es_vectorview_it(g, it, &vectores);
-  IGRAPH_FINALLY(igraph_es_destroy, &vectores);
-  v=igraph_es_vector_getvector(g, &vectores);
-  vlen=igraph_vector_size(v);
-  
-  PROTECT(result=NEW_LIST(2));
-  SET_VECTOR_ELT(result, 0, NEW_NUMERIC(3));
-  SET_VECTOR_ELT(result, 1, NEW_NUMERIC(vlen));
-  REAL(VECTOR_ELT(result, 0))[0]=1;
-  REAL(VECTOR_ELT(result, 0))[1]=1;
-  REAL(VECTOR_ELT(result, 0))[2]=vlen;
-  igraph_vector_copy_to(v, REAL(VECTOR_ELT(result, 1)));
-  
-  SET_CLASS(result, ScalarString(CREATE_STRING_VECTOR("igraphesvector")));
-  
-  igraph_es_destroy(&vectores);
-  IGRAPH_FINALLY_CLEAN(1);
   UNPROTECT(1);
   return result;
 }
@@ -2089,359 +2023,6 @@ SEXP R_igraph_transitivity(SEXP graph, SEXP ptype) {
   return result;
 }
   
-SEXP R_igraph_vs_all(SEXP graph) {
-  
-  igraph_t g;
-  igraph_vs_t it;
-  SEXP result;
-  
-  R_igraph_before();
-  
-  R_SEXP_to_igraph(graph, &g);
-  igraph_vs_all(&g, &it);
-  PROTECT(result=R_igraph_vs_to_SEXP(&g, &it));
-  igraph_vs_destroy(&it);
-
-  R_igraph_after();
-  
-  UNPROTECT(1);
-  return result;
-}
-
-SEXP R_igraph_es_all(SEXP graph) {
-
-  igraph_t g;
-  igraph_es_t it;
-  SEXP result;
-  
-  R_igraph_before();
-  
-  R_SEXP_to_igraph(graph, &g);
-  igraph_es_all(&g, &it);
-  PROTECT(result=R_igraph_es_to_SEXP(&g, &it));
-  igraph_es_destroy(&it);
-
-  R_igraph_after();
-  
-  UNPROTECT(1);
-  return result;
-}
-
-SEXP R_igraph_es_fromorder(SEXP graph) {
-
-  igraph_t g;
-  igraph_es_t it;
-  SEXP result;
-  
-  R_igraph_before();
-  
-  R_SEXP_to_igraph(graph, &g);
-  igraph_es_fromorder(&g, &it);
-  PROTECT(result=R_igraph_es_to_SEXP(&g, &it));
-  igraph_es_destroy(&it);
-
-  R_igraph_after();
-  
-  UNPROTECT(1);
-  return result;
-}
-
-SEXP R_igraph_es_adj(SEXP graph, SEXP pvid, SEXP pmode) {
-
-  igraph_t g;
-  igraph_es_t it;
-  igraph_integer_t vid=REAL(pvid)[0];
-  igraph_integer_t mode=REAL(pmode)[0];
-  SEXP result;
-  
-  R_igraph_before();
-  
-  R_SEXP_to_igraph(graph, &g);
-  igraph_es_adj(&g, &it, vid, mode);
-  PROTECT(result=R_igraph_es_to_SEXP(&g, &it));
-  igraph_es_destroy(&it);
-
-  R_igraph_after();
-  
-  UNPROTECT(1);
-  return result;
-}
-
-SEXP R_igraph_vs_adj(SEXP graph, SEXP pvid, SEXP pmode) {
-
-  igraph_t g;
-  igraph_vs_t it;
-  igraph_integer_t vid=REAL(pvid)[0];
-  igraph_integer_t mode=REAL(pmode)[0];
-  SEXP result;
-  
-  R_igraph_before();
-  
-  R_SEXP_to_igraph(graph, &g);
-  igraph_vs_adj(&g, &it, vid, mode);
-  PROTECT(result=R_igraph_vs_to_SEXP(&g, &it));
-  igraph_vs_destroy(&it);
-
-  R_igraph_after();
-  
-  UNPROTECT(1);
-  return result;
-}
-
-SEXP R_igraph_vs_vector(SEXP graph, SEXP vec) {
-  
-  igraph_t g;
-  igraph_vs_t it;
-  igraph_vector_t v;
-  SEXP result;
-  
-  R_igraph_before();
-  
-  R_SEXP_to_igraph(graph, &g);
-  R_SEXP_to_vector(vec, &v);
-  igraph_vs_vectorview(&g, &it, &v);
-  PROTECT(result=R_igraph_vs_to_SEXP(&g, &it));
-  igraph_vs_destroy(&it);
-
-  R_igraph_after();
-  
-  UNPROTECT(1);
-  return result;
-}
-
-SEXP R_igraph_es_vector(SEXP graph, SEXP vec) {
-  
-  igraph_t g;
-  igraph_es_t it;
-  igraph_vector_t v;
-  SEXP result;
-  
-  R_igraph_before();
-  
-  R_SEXP_to_igraph(graph, &g);
-  R_SEXP_to_vector(vec, &v);
-  igraph_es_vectorview(&g, &it, &v);
-  PROTECT(result=R_igraph_es_to_SEXP(&g, &it));
-  igraph_es_destroy(&it);
-
-  R_igraph_after();
-  
-  UNPROTECT(1);
-  return result;
-}
-
-SEXP R_igraph_vs_next(SEXP graph, SEXP pit) {
-
-  igraph_t g;
-  igraph_vs_t it;
-  SEXP result;
-
-  R_igraph_before();
-  
-  R_SEXP_to_igraph(graph, &g);
-  R_SEXP_to_igraph_vs_copy(pit, &g, &it);
-  igraph_vs_next(&g, &it);
-  PROTECT(result=R_igraph_vs_to_SEXP(&g, &it));
-  igraph_vs_destroy(&it);
-  
-  R_igraph_after();
-  
-  UNPROTECT(1);
-  return result;
-}
-
-SEXP R_igraph_es_next(SEXP graph, SEXP pit) {
-
-  igraph_t g;
-  igraph_es_t it;
-  SEXP result;
-
-  R_igraph_before();
-  
-  R_SEXP_to_igraph_es_copy(pit, &g, &it);
-  R_SEXP_to_igraph(graph, &g);
-  igraph_es_next(&g, &it);
-  PROTECT(result=R_igraph_es_to_SEXP(&g, &it));
-  igraph_es_destroy(&it);
-  
-  R_igraph_after();
-  
-  UNPROTECT(1);
-  return result;
-}
-
-SEXP R_igraph_vs_reset(SEXP graph, SEXP pit) {
-
-  igraph_t g;
-  igraph_vs_t it;
-  SEXP result;
-
-  R_igraph_before();
-  
-  R_SEXP_to_igraph(graph, &g);
-  R_SEXP_to_igraph_vs_copy(pit, &g, &it);
-  igraph_vs_reset(&g, &it);
-  PROTECT(result=R_igraph_vs_to_SEXP(&g, &it));
-  igraph_vs_destroy(&it);
-  
-  R_igraph_after();
-  
-  UNPROTECT(1);
-  return result;
-}
-
-SEXP R_igraph_es_reset(SEXP graph, SEXP pit) {
-
-  igraph_t g;
-  igraph_es_t it;
-  SEXP result;
-
-  R_igraph_before();
-  
-  R_SEXP_to_igraph(graph, &g);
-  R_SEXP_to_igraph_es_copy(pit, &g, &it);
-  igraph_es_reset(&g, &it);
-  PROTECT(result=R_igraph_es_to_SEXP(&g, &it));
-  igraph_es_destroy(&it);
-  
-  R_igraph_after();
-  
-  UNPROTECT(1);
-  return result;
-}
-
-SEXP R_igraph_vs_end(SEXP graph, SEXP pit) {
-
-  igraph_t g;
-  igraph_vs_t it;
-  igraph_bool_t res;
-  SEXP result;
-
-  R_igraph_before();
-  
-  R_SEXP_to_igraph(graph, &g);
-  R_SEXP_to_igraph_vs_copy(pit, &g, &it);
-  res=igraph_vs_end(&g, &it);
-  PROTECT(result=NEW_LOGICAL(1));
-  LOGICAL(result)[0]=res;
-  igraph_vs_destroy(&it);
-  
-  R_igraph_after();
-  
-  UNPROTECT(1);
-  return result;
-}
-
-SEXP R_igraph_es_end(SEXP graph, SEXP pit) {
-
-  igraph_t g;
-  igraph_es_t it;
-  igraph_bool_t res;
-  SEXP result;
-
-  R_igraph_before();
-  
-  R_SEXP_to_igraph(graph, &g);
-  R_SEXP_to_igraph_es_copy(pit, &g, &it);
-  res=igraph_es_end(&g, &it);
-  PROTECT(result=NEW_LOGICAL(1));
-  LOGICAL(result)[0]=res;
-  igraph_es_destroy(&it);
-  
-  R_igraph_after();
-  
-  UNPROTECT(1);
-  return result;
-}
-
-SEXP R_igraph_vs_get(SEXP graph, SEXP pit) {
-
-  igraph_t g;
-  igraph_vs_t it;
-  igraph_integer_t res;
-  SEXP result;
-
-  R_igraph_before();
-  
-  R_SEXP_to_igraph(graph, &g);
-  R_SEXP_to_igraph_vs_copy(pit, &g, &it);
-  res=igraph_vs_get(&g, &it);
-  PROTECT(result=NEW_NUMERIC(1));
-  REAL(result)[0]=res;
-  igraph_vs_destroy(&it);
-  
-  R_igraph_after();
-  
-  UNPROTECT(1);
-  return result;
-}
-
-SEXP R_igraph_es_get(SEXP graph, SEXP pit) {
-
-  igraph_t g;
-  igraph_es_t it;
-  igraph_integer_t res;
-  SEXP result;
-
-  R_igraph_before();
-  
-  R_SEXP_to_igraph(graph, &g);
-  R_SEXP_to_igraph_es_copy(pit, &g, &it);
-  res=igraph_es_get(&g, &it);
-  PROTECT(result=NEW_NUMERIC(1));
-  REAL(result)[0]=res;
-  igraph_es_destroy(&it);
-  
-  R_igraph_after();
-  
-  UNPROTECT(1);
-  return result;
-}
-
-SEXP R_igraph_es_from(SEXP graph, SEXP pit) {
-
-  igraph_t g;
-  igraph_es_t it;
-  igraph_integer_t res;
-  SEXP result;
-
-  R_igraph_before();
-  
-  R_SEXP_to_igraph(graph, &g);
-  R_SEXP_to_igraph_es_copy(pit, &g, &it);
-  res=igraph_es_from(&g, &it);
-  PROTECT(result=NEW_NUMERIC(1));
-  REAL(result)[0]=res;
-  igraph_es_destroy(&it);
-  
-  R_igraph_after();
-  
-  UNPROTECT(1);
-  return result;
-}
-
-SEXP R_igraph_es_to(SEXP graph, SEXP pit) {
-
-  igraph_t g;
-  igraph_es_t it;
-  igraph_integer_t res;
-  SEXP result;
-
-  R_igraph_before();
-  
-  R_SEXP_to_igraph(graph, &g);
-  R_SEXP_to_igraph_es_copy(pit, &g, &it);
-  res=igraph_es_to(&g, &it);
-  PROTECT(result=NEW_NUMERIC(1));
-  REAL(result)[0]=res;
-  igraph_es_destroy(&it);
-  
-  R_igraph_after();
-  
-  UNPROTECT(1);
-  return result;
-}
-
 SEXP R_igraph_read_graph_edgelist(SEXP pvfile, SEXP pn, SEXP pdirected) {
   igraph_t g;
   igraph_integer_t n=REAL(pn)[0];
